CSS fixes causing issues on mobile views

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,6 @@
 
 .home-contents{
   background-color:#121212;
-  position: absolute;
-  top: 25vh;
   bottom: 50%;
 }
 
@@ -43,7 +41,7 @@ a:hover{
 }
 
 .home-intro-box{
-	transform: translate(0%, -25%);
+	transform: translate(0%, 0%);
 }
 
 h2{
